src/objects/Direct_Collaborators__c.object
<CustomObject>
    <fields>
        <fullName>CO_Feed__c</fullName>
        <label>CO Feed</label>
        <referenceTo>CO_Feed__c</referenceTo>
        <relationshipLabel>Direct Collaborators</relationshipLabel>
        <relationshipName>Direct_Collaborators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Collaborator_Active__c</fullName>
        <description>Use this field for pulling CO Feed reports</description>
        <formula>Collaborator_Name__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collaborator Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collaborator_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collaborator Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Direct_Collaborators1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmployeeActive__c</fullName>
        <formula>CO_Feed__r.Employee__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmployeeId__c</fullName>
        <formula>CO_Feed__r.Emp_18_digit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <formula>CO_Feed__r.Employee__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parentquarter__c</fullName>
        <formula>Text(CO_Feed__r.Quarter__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q42017</fullName>
                </value>
                <value>
                    <fullName>Q12018</fullName>
                </value>
                <value>
                    <fullName>Q22018</fullName>
                </value>
                <value>
                    <fullName>Q32018</fullName>
                </value>
                <value>
                    <fullName>Q42018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rater_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rater Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Direct_Collaborators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <defaultValue>&quot;Collaborator&quot;</defaultValue>
        <label>Team Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rater_collab__c</fullName>
        <formula>Rater_Name__r.Full_Name__c  + &apos;-&apos; +  Collaborator_Name__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rater - collab</label>
        <type>Text</type>
    </fields>
    <label>Direct Collaborators</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Collaborator_Name__c</columns>
        <columns>Rater_Name__c</columns>
        <columns>Employee_Name__c</columns>
        <columns>Team_Role__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Quarter__c</columns>
        <columns>Parentquarter__c</columns>
        <columns>CO_Feed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parentquarter__c</field>
            <operation>contains</operation>
            <value>Q32018</value>
        </filters>
        <filters>
            <field>Rater_Name__c</field>
            <operation>contains</operation>
            <value>Amanda Rekenthaler</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DC-Id-{0000000}</displayFormat>
        <label>Direct Collaborators Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direct Collaborators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_add_more_than_5_Collaborators</fullName>
        <active>true</active>
        <errorConditionFormula>ISNew()
&amp;&amp;
CO_Feed__r.Count_Collabs__c  &gt;= 5</errorConditionFormula>
        <errorMessage>Cannot add more than five Collaborators</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Current_Quarter_records_can_be_edit</fullName>
        <active>true</active>
        <errorConditionFormula>Parentquarter__c &lt;&gt; &apos;Q32018&apos; &amp;&amp;
$Profile.Name &lt;&gt; &quot;System Administrator&quot;</errorConditionFormula>
        <errorMessage>This collaborator record belongs to previous quarter which should not be edited. Please select current quarter records.</errorMessage>
    </validationRules>
</CustomObject>